# amplifier-module-hooks-scheduler-cost-aware

./: README.md  pyproject.toml
amplifier_mod_hooks_scheduler_cost_aware.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
amplifier_module_hooks_scheduler_cost_aware/: __init__.py
tests/: test_behavioral.py  test_validation.py
